--- a/GettingStarted/GettingStarted.UWP/GettingStarted.UWP.csproj
+++ b/GettingStarted/GettingStarted.UWP/GettingStarted.UWP.csproj
@@ -149,10 +149,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Syncfusion.Xamarin.Expander">
-      <Version>17.1.0.32-beta</Version>
+      <Version>17.4.0.39</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GettingStarted\GettingStarted.csproj">
