--- a/GettingStarted/GettingStarted.iOS/GettingStarted.iOS.csproj
+++ b/GettingStarted/GettingStarted.iOS/GettingStarted.iOS.csproj
@@ -120,9 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Syncfusion.Xamarin.Expander">
-      <Version>17.1.0.32-beta</Version>
+      <Version>17.4.0.39</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
