--- a/GettingStarted/GettingStarted/GettingStarted.csproj
+++ b/GettingStarted/GettingStarted/GettingStarted.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="17.1.0.32-beta" />
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="17.4.0.39" />
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
   </ItemGroup>
 
   <ItemGroup>
